--- a/src/sb_lr2/src/main/resources/application.properties
+++ b/src/sb_lr2/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=Lab2Application
 server.port=8082
+
+logging.level.org.springframework=ERROR
+logging.level.ru.vasilkov=DEBUG
